--- a/src/app/UI/InteractiveTable.module.css
+++ b/src/app/UI/InteractiveTable.module.css
@@ -4,6 +4,8 @@
     margin-left:auto;
     margin-right:auto;
     font-size:14px;
+    text-align: center;
+    margin-bottom:var(--margin-1);
 }
 
 .wrapper th{
