--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,3 +149,35 @@ form{
 .margin-bottom-1{
 	margin-bottom:var(--margin-1);
 }
+
+table{
+    border-collapse: collapse;
+    color:var(--font-color-1);
+    margin-left:auto;
+    margin-right:auto;
+    font-size:14px;
+    text-align: center;
+    margin-bottom:var(--margin-1);
+}
+
+th{
+    padding:var(--padding-1);
+    color:yellow;
+    font-weight:normal;
+}
+
+th:hover{
+    cursor: pointer;
+    user-select: none;
+}
+
+td{
+    padding:var(--padding-2);
+}
+
+tr:nth-child(even){
+    background-color:var(--bg-color-2);
+}
+tr:nth-child(odd){
+    background-color:var(--bg-color-3);
+}
