--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,14 @@
 	--font-size-2:18px;
 	--font-size-3:20px;
 	--transition-1:background-color 0.5s;
+	--width-1:90%;
+	--width-2:75%;
+	--width-3:66%;
+	--width-4:50%;
+	--max-table-width-1:1500px;
+	--max-table-width-2:1200px;
+	--max-table-width-3:1000px;
+	--max-table-width-4:700px;
 }
 
 .team-none{
@@ -180,4 +188,29 @@ tr:nth-child(even){
 }
 tr:nth-child(odd){
     background-color:var(--bg-color-3);
+}
+
+.player-name-td{
+	min-width:150px;
+	width:150px;
+}
+
+.t-width-1{
+	width:var(--width-1);
+	max-width:var(--max-table-width-1);
+}
+
+.t-width-2{
+	width:var(--width-1);
+	max-width:var(--max-table-width-2);
+}
+
+.t-width-3{
+	width:var(--width-1);
+	max-width:var(--max-table-width-3);
+}
+
+.t-width-4{
+	width:var(--width-1);
+	max-width:var(--max-table-width-4);
 }
