--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 	--bg-color-2:rgb(32,32,32);
 	--bg-color-3:rgb(46,46,46);
 	--bg-color-4:rgb(56,56,56);
+	--bg-color-5:rgb(18,18,18);
 	--font-color-1:rgb(255,255,255);
 	--font-color-2:rgb(164,164,164);
 	--font-color-3:yellow;
@@ -172,6 +173,7 @@ th{
     padding:var(--padding-1);
     color:yellow;
     font-weight:normal;
+	background-color:var(--bg-color-5);
 }
 
 th:hover{
