Set player playtime without warmup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -198,6 +198,7 @@ th:hover{
 td{
     padding:var(--padding-2) var(--padding-3);
 	border:1px solid var(--border-color-1);
+	font-size:var(--font-size-1);
 }
 
 tr:nth-child(even){
