Keep track of players' last active date

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -270,3 +270,8 @@ tr:nth-child(even):hover, tr:nth-child(odd):hover{
 .hidden{
 	display:none;
 }
+
+
+.font-small{
+	font-size:var(--font-size-small);
+}
