--- a/src/app/UI/Pagination.module.css
+++ b/src/app/UI/Pagination.module.css
@@ -8,7 +8,7 @@
 
 .button{
     display:inline-block;
-    padding:10px;
+    padding:var(--padding-2);
     background-color:var(--bg-color-3);
     border:1px solid var(--border-color-1);
     margin-right:5px;
