--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -306,3 +306,10 @@ option{
 	font-size:var(--font-size-1);
     line-height:var(--line-height-1);
 }
+
+.small-info{
+	padding:var(--padding-1);
+	color:var(--font-color-1);
+	font-size:var(--font-size-small);
+	text-align: center;
+}
