--- a/src/app/UI/Tabs.module.css
+++ b/src/app/UI/Tabs.module.css
@@ -13,7 +13,7 @@
 .tab:hover{
     cursor:pointer;
     user-select:none;
-    background-color:var(--bg-color-2);
+    color:yellow;
 }
 
 .selected{
