--- a/src/app/UI/Tabs.module.css
+++ b/src/app/UI/Tabs.module.css
@@ -3,6 +3,7 @@
     color:var(--font-color-1);
     text-align:center;
     margin-bottom:var(--margin-1);
+    font-size: var(--font-size-small);
 }
 
 .tab{
