Logs Folder Settings Admin Tool

--- a/src/app/UI/ErrorBox.module.css
+++ b/src/app/UI/ErrorBox.module.css
@@ -1,6 +1,7 @@
 .wrapper{
     background-color:var(--team-color-red);
     color:var(--font-color-1);
+    margin-bottom:var(--margin-1);
 }
 
 .title{
