--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -325,6 +325,10 @@ tr:nth-child(even):hover, tr:nth-child(odd):hover{
 	color:var(--font-color-2);
 }
 
+.date a{
+	color:var(--font-color-2);
+}
+
 select{
 	background-color:var(--bg-color-3);
 	color:var(--font-color-1);
