--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,12 +13,14 @@
 	--active-link-color:yellow;
 	--border-color-1:rgba(255,255,255,0.05);
 	--border-color-2:rgba(255,255,255,0.125);
+	--border-color-3:rgba(255,255,255,0.025);
 	--max-width-1:90%;
 	--team-color-none:rgb(0,0,0);
 	--team-color-red:rgb(79,0,0);
 	--team-color-blue:rgb(10,51,106);
 	--team-color-green:rgb(0,56,0);
 	--team-color-yellow:rgb(85,85,0);
+	--purple:rgb(75,0,130);
 	--margin-1:25px;
 	--margin-2:10px;
 	--font-size-small:12px;
@@ -228,7 +230,7 @@ th{
     color:yellow;
     font-weight:normal;
 	background-color:var(--bg-color-5);
-	border:1px solid var(--border-color-1);
+	border:1px solid var(--border-color-3);
 }
 
 th a{
@@ -241,7 +243,7 @@ th:hover{
 }
 
 td{
-	border:1px solid var(--border-color-1);
+	border:1px solid var(--border-color-3);
 	padding:var(--padding-3);
 	font-size:var(--font-size-1);
 	line-height:var(--line-height-1);
@@ -435,4 +437,13 @@ canvas{
 .social-media-icon{
 	width:64px;
 	height:64px;
+}
+
+.perma-link{
+	background-color:var(--purple);
+	padding:5px;
+}
+
+.perma-link:hover{
+	cursor: pointer;
 }
