--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -451,8 +451,9 @@ canvas{
 .map-sshot{
 	margin-left:auto;
 	margin-right:auto;
-	max-width:66vw;
+	max-width:33vw;
 	overflow:hidden;
+	margin-bottom:var(--margin-1);
 }
 
 .map-sshot img{
