--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -461,3 +461,28 @@ canvas{
 	width: 100%;
 	height: auto;
 }
+
+.tabs-wrapper{
+	background-color:var(--bg-color-3);
+	color:var(--font-color-1);
+	text-align:center;
+	margin-bottom:var(--margin-1);
+	font-size: var(--font-size-small);
+}
+
+.tab{
+    display:inline-block;
+    padding:var(--padding-2) var(--padding-1);
+    user-select: none;
+}
+
+.tab:hover{
+    cursor:pointer;
+    user-select:none;
+    color:yellow;
+}
+
+
+.tab-selected{
+	background-color:rgb(164,0,0);
+}
