Fixed weapon images, change th hover, design tweak

--- a/src/app/UI/Nav.module.css
+++ b/src/app/UI/Nav.module.css
@@ -1,6 +1,9 @@
 .wrapper{
     background-color:var(--bg-color-2);
     color:var(--font-color-2);
+    position:fixed;
+    top:0;
+    width:100%;
 }
 
 .wrapper a{
