--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
 	--bg-color-1:rgb(64,64,64);
@@ -82,7 +82,7 @@
 *{
 	margin:0;
 	padding:0;
-	font-family: "Roboto", sans-serif;
+	font-family: "Montserrat", sans-serif;
 }
 
 table{
@@ -92,7 +92,7 @@ table{
 body{ 
 	min-height: 100vh; 
 	display: grid;
-	grid-template-rows: auto auto 1fr auto;
+	grid-template-rows: auto 1fr auto;
 	background-color:var(--bg-color-1);
   }
 
@@ -231,6 +231,8 @@ th{
     font-weight:normal;
 	background-color:var(--bg-color-5);
 	border:1px solid var(--border-color-3);
+	font-weight:400;
+	font-size:14px;
 }
 
 th a{
@@ -238,7 +240,6 @@ th a{
 }
 
 th:hover{
-    cursor: pointer;
     user-select: none;
 }
 
@@ -440,8 +441,10 @@ canvas{
 }
 
 .perma-link{
-	background-color:var(--purple);
+	background-color:var(--team-color-red);
 	padding:5px;
+	display:inline-block;
+	margin-bottom:10px;
 }
 
 .perma-link:hover{
@@ -491,4 +494,8 @@ canvas{
 	color:white;
 	font-size:12px;
 	text-transform:uppercase;
+}
+
+.sort-hover:hover{
+	cursor: pointer;
 }
