--- a/src/app/UI/MatchRichBox.module.css
+++ b/src/app/UI/MatchRichBox.module.css
@@ -6,11 +6,14 @@
 	margin-bottom: var(--margin-2);
 	width:350px;
     border:1px solid var(--border-color-1);
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .title{
 	color:var(--font-color-1);
 	padding:var(--padding-1);
+    text-overflow: ellipsis;
     
 }
 
@@ -19,6 +22,7 @@
     font-size:var(--font-size-4);
     line-height: var(--line-height-1);
     margin-bottom:var(--margin-2);
+    text-overflow: ellipsis;
 }
 
 .white{
