--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -554,29 +554,33 @@ canvas{
     text-overflow: ellipsis;
 }
 
-textarea{
-	font-size:var(--font-size-1);
-	background-color:var(--bg-color-3);
-	border:1px solid var(--border-color-1);
-	color:var(--font-color-1);
-	min-height:100px;
-}
-
 .admin-textarea-wrapper{
 	width:90%;
 	margin-left:auto;
 	margin-right:auto;
 	display:inline-block;
 	overflow:hidden;
+	background-color:var(--bg-color-2);
 }
 
 .admin-textarea-wrapper textarea{
 	display:block;
-	width:100%;
+	width:99%;
+	padding-left:5px;
+	font-size:var(--font-size-1);
+	background-color:var(--bg-color-3);
+	border:1px solid var(--border-color-1);
+	color:var(--font-color-1);
+	min-height:150px;
 }
 
 .welcome-message{
 	text-align:center;
 	color:var(--font-color-1);
 	margin-bottom:var(--margin-1);
+}
+
+.welcome-message-link{
+	text-decoration: underline;
+	color:yellow;
 }
