--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -684,3 +684,20 @@ canvas{
 	background-color: var(--bg-color-2);
 	padding:5px;
 }
+
+.basic-mouse-over-wrapper{
+	display:inline-block;
+
+}
+
+.basic-mouse-over{
+	position:absolute;
+	background-color:var(--bg-color-2);
+	padding:var(--padding-2);
+	font-size:12px;
+	color:white;
+}
+
+.basic-mouse-over-title{
+	font-weight:bold;
+}
