--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -379,6 +379,10 @@ option{
 	cursor: pointer;
 }
 
+.small-buttons{
+	margin-bottom:var(--margin-2);
+}
+
 .small-button{
 	display:inline-block;
 	background-color:var(--bg-color-3);
@@ -687,8 +691,12 @@ canvas{
 
 .ctf-cap{
 	color:var(--font-color-1);
-	/*background-color:var(--bg-color-3);*/
+	background-color:var(--bg-color-2);
 	padding-top:var(--padding-1);
+	margin-bottom:var(--margin-1);
+	max-width:var(--max-table-width-3);
+	margin-left:auto;
+	margin-right:auto;
 }
 
 .cap-info{
@@ -710,7 +718,8 @@ canvas{
 
 .basic-mouse-over{
 	position:absolute;
-	background-color:var(--bg-color-2);
+	background-color:var(--bg-color-5);
+	border:1px solid var(--border-color-1);
 	padding:var(--padding-2);
 	font-size:12px;
 	color:white;
@@ -719,4 +728,9 @@ canvas{
 
 .basic-mouse-over-title{
 	font-weight:bold;
+}
+
+
+.basic-team-score{
+	padding:var(--padding-1);
 }
