--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,6 +119,13 @@ a{
 	margin-right:auto;
 }
 
+.padding-1{
+	padding:var(--padding-1);
+}
+
+.padding-2{
+	padding:var(--padding-2);
+}
 
 .padding-top{
 	height:50px;
@@ -379,9 +386,7 @@ option{
 	cursor: pointer;
 }
 
-.small-buttons{
-	margin-bottom:var(--margin-2);
-}
+
 
 .small-button{
 	display:inline-block;
@@ -694,6 +699,14 @@ canvas{
 	background-color:var(--bg-color-2);
 	padding-top:var(--padding-1);
 	margin-bottom:var(--margin-1);
+	max-width:var(--max-table-width-3);
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.ctf-cap-buttons{
+	color:var(--font-color-1);
+	background-color:var(--bg-color-2);
 	max-width:var(--max-table-width-3);
 	margin-left:auto;
 	margin-right:auto;
