--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -281,6 +281,7 @@ tr:nth-child(even):hover, tr:nth-child(odd):hover{
 .player-name-td{
 	min-width:175px;
 	width:175px;
+	text-align:left;
 }
 
 .t-width-1{
