--- a/src/app/UI/Nav.module.css
+++ b/src/app/UI/Nav.module.css
@@ -5,11 +5,17 @@
     top:0;
     width:100%;  
     text-align:center;
+    font-size:14px;
 }
 
 .wrapper a{
     display:inline-block;
     padding:15px 15px;
+}
+
+.wrapper a:hover{
+    border-bottom:2px solid rgb(122,122,0);
+    color:rgb(188,188,0);
 }
 
 .active{
