--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@
 	--purple:rgb(55,0,110);
 	--margin-1:25px;
 	--margin-2:10px;
+	--tiny-font-size:8px;
 	--font-size-small:12px;
 	--padding-1:10px;
 	--padding-2:5px;
@@ -839,4 +840,27 @@ canvas{
 .country-flag-wrapper{
     display:inline-block;
     padding-right:2px;
+}
+
+
+.calendar-block{
+	display:inline-block;
+	padding:3px;
+	color:white;
+	background-color: var(--bg-color-3);
+	text-align:center;
+	border:1px solid black;
+	margin-top:-1px;
+	margin-left:-1px;
+}
+
+.calendar-row{
+	max-width:300px;
+	background-color: var(--bg-color-2);
+	display:grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.tiny-font{
+	font-size: var(--tiny-font-size);
 }
