--- a/src/app/UI/Pagination.module.css
+++ b/src/app/UI/Pagination.module.css
@@ -2,19 +2,19 @@
     text-align: center;
     margin-top:var(--margin-1);
     margin-bottom:var(--margin-1);
-    background-color: var(--bg-color-3);
+    background-color: var(--bg-color-2);
     padding-bottom:var(--padding-1);
 }
 
 .button{
     display:inline-block;
     padding:var(--padding-2);
-    background-color:var(--bg-color-2);
+    background-color:var(--bg-color-5);
     border:1px solid var(--border-color-2);
     margin-right:5px;
     color:var(--font-color-1);
     user-select: none;
-    font-size:18px;
+    font-size:14px;
     padding:10px;
 }
 
@@ -25,11 +25,12 @@
 .active{
     color:var(--active-font-color-1);
     font-weight:bold;
+    border-bottom: 2px solid yellow;
 }
 
 .info{
     font-size:var(--font-size-small);
     color:var(--font-color-1);
-    padding:var(--padding-1);
+    padding:var(--padding-2);
     line-height:20px;
 }
